swagger+fix some moments
